--- a/FlightTicketSalesSite/Views/Home/TicketReservation.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TicketReservation.cshtml
@@ -132,7 +132,7 @@
                     </div>
                     <div class="form-group row mb-2 ">
                         <div class="col-md-3 fw-bold">
-                            <label asp-for="IdentityNumber" class="form-label">@_localization.Getkey("Identity Number").Value</label>
+                            <label asp-for="IdentityNumber" class="form-label">@_localization.Getkey("Kimlik Numarası").Value</label>
                         </div>
                         <div class="col-md-9">
                             <input type="text" class="form-control form-control-md" asp-for="IdentityNumber" />
