--- a/FlightTicketSalesSite/Views/Shared/_Footer.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Footer.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="container" style="margin-top:80px">
-    &copy; 2023 - G201210051 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    &copy; 2023 - G201210051 - G211210031 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 </div>
