şifremi unuttum sayfası eklendi

--- a/FlightTicketSalesSite/Views/Account/Login.cshtml
+++ b/FlightTicketSalesSite/Views/Account/Login.cshtml
@@ -35,6 +35,9 @@
 				<div class="col-md-10 offset-2">
 					<button class="btn btn-continue" style="width:211px" type="submit">@_localization.Getkey("Login").Value</button>
 				</div>
+				<div class="col-md-10 offset-2 mt-2" >
+					<a asp-action="ForgotPassword" class="btn btn-warning" style="width:211px"> @_localization.Getkey("Forgot Password").Value</a>
+				</div>
 			</div>
 		</div>
 	</div>
